    + [BR] Correct a few typos.  (Closes: #794953)
    + [BR] Rename files-privacybreach-may-use-debian-package
      to  privacy-breach-uses-embedded-file.  Thanks to
      Guillem Jover for the report.
  * checks/scripts.desc:
    + [BR] Detect suspicious use of ln -s that could be replaced by
      dpkg-maintscript-helper.

  * debian/compat:
    + [BR] Use compat version 9.

  * private/refresh-fonts-data:
    + [NT] Prune some duplicates from the generated font file.

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Tue, 04 Aug 2015 17:28:59 +0200

lintian (2.5.35) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - non-consecutive-debian-revision
      - package-uses-experimental-debhelper-compat-version
      - package-uses-old-debhelper-compat-version

  * checks/binaries.pm:
    + [NT] Apply patch from Sebastian Andrzej Siewior to inhibit
      binary-file-built-without-LFS-support tags for binaries
      that contains the "offending" LFS symbol.  These tend to
      come from gnulib and be LFS compliant.  Thanks to Guillem
      Jover for the report.  (Closes: #787853)
  * checks/changelog-file.{desc,pm}:
    + [BR] Detect non consecutive debian revision.  (Closes: #789820)
  * checks/control-file.{desc,pm}:
    + [BR] In order to ease the multiarch-support removal the
      severity of pre-depends-directly-on-multiarch-support tag
      is raised to important. Thanks to Helmut Grohne for
      the reminder.
    + [BR] pre-depends-directly-on-multiarch-support does not need
      debhelper for being raised. Suggest to build-depends on
      debhelper >= 9.
  * checks/debhelper.{desc,pm}:
    + [BR] Use data file for pedantic warning on debhelper depends
      version.
    + [BR] Detect not recommended and experimental debhelper version.
  * checks/fields.desc:
    + [JW] Fix spelling of the word "indicate".
  * checks/scripts.desc:
    + [BR] Document why adduser --no-create-home